feat(parse): remove `html` tag when parsing html

--- a/src/__test__/test-seo-page.html
+++ b/src/__test__/test-seo-page.html
@@ -2,9 +2,35 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
   </head>
   <body>
     <img src="./test-img.png"/>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <strong>hello</strong>
+    <h1>Document should only have 1 h1</h1>
+    <h1>Document should only have 1 h1</h1>
+    <a src="missing-rel-attr.html">Missing rel attr</a>
   </body>
 </html>
